test/errors/func2.ls

#OUTPUT
#Syntax Error: Invalid function return type.
# -> [12] func main -> intt
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> intt
    return 0
end

